# euler

./: flake.nix  justfile
cpp/: .gitignore  justfile
cpp/src/: main.cpp
cpp/src/sols/: p1.hpp  p10.hpp  p11.hpp  p12.hpp  p14.hpp  p145.hpp  p15.hpp  p17.hpp  p18.hpp  p2.hpp  p21.hpp  p23.hpp  p27.hpp  p3.hpp  p30.hpp  p35.hpp  p37.hpp  p39.hpp  p4.hpp  p44.hpp  p45.hpp  p46.hpp  p47.hpp  p5.hpp  p6.hpp  p67.hpp  p7.hpp  p8.hpp  p9.hpp
cpp/src/sols/include/: math-utils.hpp  primality.hpp  stopwatch.hpp  timer.hpp
py/: .gitignore  README.md  justfile  main.py  pyproject.toml
py/src/: __init__.py
py/src/sols/: __init__.py  p13.py  p16.py  p19.py  p20.py  p22.py  p24.py  p25.py  p29.py  p34.py  p36.py  p40.py  p42.py  p48.py  p53.py  p56.py
py/src/utils/: __init__.py  alph_pos.py  files.py  parse.py  performance.py
rs/: Cargo.toml  README.md  justfile
rs/src/: main.rs
rs/src/sols/: mod.rs  p1.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p145.rs  p15.rs  p2.rs  p3.rs  p4.rs  p5.rs  p587.rs  p6.rs  p7.rs  p8.rs  p9.rs
rs/src/utils/: math.rs  mod.rs  primes.rs  stopwatch.rs
